--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,5 +1,165 @@
-<h1>Home Page</h1>
 
-<a href="/subscriptions">
+<header style="background-image: url('images/hero_old3.jpg')">
+
+  <!-- <div class="background_img">
+    <img src="images/hero_old2.jpg" alt="">
+  </div> -->
+
+  <!-- <div class="overlay"></div> -->
+
+  <div class="nav">
+    <div class="nav_col_1">
+      <a href="/">
+        <img src="images/logo.png" alt="" class="logo">
+      </a>
+    </div>
+    <div class="nav_col_2">
+      <ul>
+        <li>What we're about</li>
+        <li>Pass guarantee</li>
+        <li>Pricing</li>
+        <li>Testimonials</li>
+      </ul>
+    </div>
+    <div class="nav_col_3">
+      <div class="free_lesson_btn">
+        <p>Claim a Free Lesson</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="header_content">
+
+    <div class="hero_container">
+
+      <div class="hero_left">
+        <h1>Get your license <br>today with <span id="hero_attributes"></span></h1>
+        <p id="hero_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati dolores esse repudiandae. Explicabo porro repudiandae, debitis magnam, consequuntur nisi ipsam.</p>
+        <div class="hero_cta">
+          <p>Claim a Free Lesson</p>
+        </div>
+      </div>
+
+      <div class="hero_right">
+        <!-- <video width="500" height="600" autoplay loop>
+          <source src="video/timelapse.mp4" type="video/mp4">
+        </video> -->
+        <!-- <img src="images/placeholder.svg" alt=""> -->
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="read_more">
+    <p>More about us</p>
+    <img src="images/scroll.png" alt="">
+  </div>
+
+</header>
+
+<section class="benefit">
+
+  <div class="container">
+
+    <h2>What we're <span class="red_highlight">about</span></h2>
+
+    <div class="col_third">
+      <svg></svg>
+      <h3>Make this an image</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus nihil ipsum ratione recusandae, fugit magni excepturi consequatur nisi totam officia assumenda asperiores fuga</p>
+
+    </div>
+    <div class="col_third">
+      <svg></svg>
+      <h3>Make this an image</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus nihil ipsum ratione recusandae, fugit magni excepturi consequatur nisi totam officia assumenda asperiores fuga</p>
+    </div>
+    <div class="col_third">
+      <svg></svg>
+      <h3>Make this an image</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus nihil ipsum ratione recusandae, fugit magni excepturi consequatur nisi totam officia assumenda asperiores fuga</p>
+    </div>
+
+  </div>
+
+</section>
+
+<section class="pass_guarentee">
+
+  <div class="container">
+
+    <h2>Pass Guarentee</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  </div>
+
+</section>
+
+<section class="pricing" style="background: url('patterns/agsquare.png')">
+
+  <div class="container">
+
+    <h2>Pricing</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga perferendis aspernatur veniam dolorem a in esse quaerat eum incidunt minus quae quod maiores consequuntur dolore, aut facere impedit sunt? Blanditiis.</p>
+
+  </div>
+
+  <!-- pricing finder -->
+
+</section>
+
+<section class="testimonials">
+
+  <div class="container">
+
+    <h2>Testimonails</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel harum eius, quis maxime velit voluptas laudantium non obcaecati quibusdam optio ut natus, voluptatum repellendus. Temporibus beatae labore fugiat, iure commodi.</p>
+
+    <!-- slider here -->
+    <!-- slick -->
+
+  </div>
+
+  <!-- background floating pictures of students -->
+
+</section>
+
+<footer>
+
+  <div class="container">
+
+    <h1>Footer</h1>
+
+  </div>
+
+
+</footer>
+
+
+<script>
+
+  //Typed JS
+  $(function(){
+      $("#hero_attributes").typed({
+        strings: ["Confidence.", "Ease.", "Speed."],
+        typeSpeed: 50,
+        startDelay: 2000,
+        backSpeed: 25,
+        backDelay: 3000,
+        loop: true
+      });
+  });
+
+  // Click to view more
+  $(".read_more").on('click', function() {
+    $('html, body').animate({scrollTop: $(".benefit").offset().top}, 1000);
+  });
+
+</script>
+
+
+
+<!-- <a href="/subscriptions">
   <button>Subscription Sell Page</button>
-</a>
+</a>  -->
