--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -19,6 +19,7 @@ body {
 .container {
   max-width: 1380px;
   margin: 0 auto;
+  overflow: auto;
 }
 
 section {
@@ -30,6 +31,11 @@ section {
   // border: 1px solid black;
   float: left;
 }
+
+button:focus {
+  outline:0;
+}
+
 
 // ################# COLOR VARIABLES #################
 
@@ -53,17 +59,20 @@ h1 {
   color: $headline-color;
   font-family: 'Exo', sans-serif;
   line-height: 1.2em;
+  font-family: $primary-font;
 }
 
 h2 {
   font-size: 3em;
   color: $headline-color;
-
+  font-family: $primary-font
 }
 
 h3 {
   font-size: 1em;
   color: $accent-red;
+  font-family: $primary-font;
+  letter-spacing: 0.2em;
 }
 
 h4 {
@@ -92,16 +101,6 @@ header {
   background-position: 54% 46%;
   min-width: 100%;
   min-height: 100%;
-
-  // .overlay {
-  //   position: absolute;
-  //   top: 0px;
-  //   left: 0px;
-  //   background-color: rgba(0, 0, 0, 0.5);
-  //   height: 100%;
-  //   width: 100%;
-  //   // z-index: 0;
-  // }
 
   .nav {
     height: 15%;
@@ -276,9 +275,10 @@ header {
 }
 
 .benefit {
-  min-height: 90vh;
+  // min-height: 90vh;
   width: 100%;
   text-align: center;
+  position: relative;
 
   .col_third {
     text-align: center;
@@ -298,15 +298,82 @@ header {
     text-decoration: underline;
   }
 
+  .sub_title {
+    width: 600px;
+    margin: 20px auto 0 auto;
+  }
+
+  img {
+    width: 70%;
+    margin-bottom: 30px;
+  }
+
+  h3 {
+    text-transform: uppercase;
+
+  }
+
 }
 
 
 
 
 .pass_guarentee {
-  background-color: mistyrose;
-  height: 70vh;
   width: 100%;
+  display: flex;
+  background: #2c2d2d;
+  position: relative;
+  background: -webkit-linear-gradient(left top, #3f3f3f, #2c2d2d);
+  background: -o-linear-gradient(bottom right, #3f3f3f, #2c2d2d);
+  background: -moz-linear-gradient(bottom right, #3f3f3f, #2c2d2d);
+  background: linear-gradient(to bottom right, #3f3f3f, #2c2d2d);
+  overflow: hidden;
+
+  .background_angle {
+    background-color: rgba(#272727,0.3);
+    height: 130vh;
+    width: 50%;
+    position: absolute;
+    top: -200px;
+    left: -300px;
+    -webkit-transform: rotate(-20deg);
+    transform: rotate(-20deg);
+    z-index: 2;
+  }
+
+  .pass_left {
+    width: 35%;
+    float: left;
+    text-align: center;
+    position: relative;
+    z-index: 5;
+
+    img {
+      width: 80%;
+    }
+
+    h2 {
+      color: $text-color;
+      font-family: $primary-font;
+      text-transform: uppercase;
+      transform: rotate(-3deg) skewX(-7deg);
+      font-weight: bolder;
+    }
+
+  }
+
+  .pass_right {
+    width: 65%;
+    float: left;
+    position: relative;
+    z-index: 5;
+    padding: 30px;
+
+    p {
+      color: white;
+    }
+
+  }
 
 }
 
@@ -318,14 +385,106 @@ header {
 }
 
 .testimonials {
-  background-color: black;
+  background-color: white;
   height: 70vh;
   width: 100%;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .testimonials_container {
+    background-color: plum;
+    max-width: 1000px;
+    text-align: center;
+
+  }
+
+}
+
+.location {
+  height: 100%;
+  width: 100%;
+  position: relative;
+
+  #map {
+    // background-color: red;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
+  }
+
+  .legend {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    margin: 0 auto;
+    height: 30%;
+    width: 100%;
+    padding: 50px;
+    text-align: center;
+
+    h2 {
+      color: $accent-red;
+    }
+
+    .location_btn {
+      background-color: $accent-red;
+      color: white;
+      font-family: $secondary-font;
+      width: 32%;
+      margin: 0;
+      padding: 10px;
+      border-radius: 70px;
+      border: 0;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $accent-red-hover;
+      }
+    }
+
+    #btn_melbourne {
+      border-top-left-radius: 70px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 70px;
+      border-bottom-right-radius: 0px;
+      margin-right: 1px;
+    }
+
+    #btn_sydney {
+      border-top-left-radius: 0px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+    }
+
+    #btn_adelaide {
+      border-top-left-radius: 0px;
+      border-top-right-radius: 70px;
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 70px;
+      margin-left: 1px;
+    }
+
+    .button_holder {
+      background-color: #363434;
+      width: 400px;
+      margin: 20px auto;
+      padding: 10px;
+      border-radius: 70px;
+
+    }
+
+  }
 
 }
 
 footer {
-  background-color: lightgrey;
+  background-color: #2c2d2d;
   height: 50vh;
   width: 100%;
   padding: 80px 0px 80px 0px;
