--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -2,7 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
 // ################# GLOBAL STYLES #################
 
 html {
@@ -101,82 +100,122 @@ header {
   background-position: 54% 46%;
   min-width: 100%;
   min-height: 100%;
+  background-color: #171717;
 
   .nav {
-    height: 15%;
-    max-width: 1380px;
+    height: 12%;
+    // max-width: 1380px;
     // background-color: plum;
     display: flex;
     margin: 0 auto;
   }
 
   .nav_col_1 {
-    width: 20%;
+    width: 15%;
     // border: 1px solid black;
-    text-align: center;
+    text-align: right;
     display: flex;
     align-items: center;
     justify-content: center;
 
     img {
-      width: 70%;
+      width: 60%;
       cursor: pointer;
     }
   }
 
   .nav_col_2 {
-    width: 55%;
+    width: 50%;
     // border: 1px solid black;
+    padding-left: 20px;
 
     ul {
       // background-color: red;
-      margin-top: 30px;
+      margin-top: 20px;
       text-transform: uppercase;
     }
 
     li {
-      // border: 1px solid black;
       display: inline-block;
       padding: 25px 15px;
-      color: rgb(210, 210, 210);
+      color: white;
       cursor: pointer;
       transition: 0.3s;
-      font-size: 0.9em;
+      font-size: 0.7em;
       font-family: 'Open Sans', sans-serif;
+      letter-spacing: 0.15em;
+    }
 
+    .nav_span {
+      padding-bottom: 5px;
+      border-bottom: 1px solid rgba(#e21e34, 0);
+      transition: 0.3s;
+    }
 
-      &:hover {
-        color: white;
-      }
+    li:hover .nav_span {
+      border-bottom: 1px solid #E21F35;
+    }
 
+    .nav_divider {
+      color: rgb(120, 120, 120);
+      font-family: 'Open Sans', sans-serif;
+      display: inline-block;
     }
 
   }
 
   .nav_col_3 {
-    width: 25%;
+    width: 35%;
     // border: 1px solid black;
     text-align: right;
-    padding-right: 20px;
-
+    padding-right: 40px;
 
     .free_lesson_btn {
       background-color: $accent-red;
       padding: 5px 30px;
       display: inline-block;
-      margin-top: 35px;
+      margin-top: 24px;
       -webkit-transform: skewX(-5deg);
       transform: skewX(-5deg);
       border-radius: 5px;
       cursor: pointer;
       transition: 0.3s;
       color: white;
+      font-size: 0.9em;
 
       &:hover {
         background-color: $accent-red-hover;
         transform: scale(1.03);
       }
 
+    }
+
+    #nav_facebook {
+      display: inline-block;
+      font-size: 0.6em;
+      font-family: 'Open Sans', sans-serif;
+      color: white;
+      text-transform: uppercase;
+      padding-right: 25px;
+      cursor: pointer;
+      letter-spacing: 0.15em;
+
+      i {
+        padding: 0px 10px 0px 0px;
+        color: rgb(180, 180, 180);
+        font-size: 1.3em;
+      }
+
+    }
+
+    .fb_span {
+      padding-bottom: 5px;
+      border-bottom: 1px solid rgba(#e21e34, 0);
+      transition: 0.3s;
+    }
+
+    .fb_span:hover {
+      border-bottom: 1px solid #E21F35;
     }
 
   }
@@ -196,16 +235,31 @@ header {
       // border: 1px solid black;
       // padding-right: 11%;
       margin-top: -100px;
+      z-index: 2;
     }
 
     h1 {
       // padding-right: 5%;
     }
 
+    #hero_highlight {
+      background: -webkit-linear-gradient(#E21F35, #c31327);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
     #hero_p {
       color: white;
       padding-right: 20%;
       margin-top: 10px;
+      padding-left: 30px;
+      border-left: 1px solid $accent-red;
+      font-family: 'Playfair Display', serif;
+      font-style: italic;
+      font-size: 1.1em;
+      line-height: 1.5em;
+      font-weight: 400;
+
     }
 
     .hero_cta {
@@ -232,6 +286,31 @@ header {
       // border: 1px solid black;
       padding: 2.5%;
       margin-top: -100px;
+
+      #bg_shape_1 {
+        position: absolute;
+        top: 200px;
+        left: 500px;
+        z-index: 1;
+      }
+
+      .img_holder {
+        background-color: red;
+        height: 500px;
+        width: 500px;
+        position: relative;
+        overflow: hidden;
+        z-index: 3;
+
+        img {
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          min-height: 100%;
+          min-width: 100%;
+        }
+
+      }
     }
 
   }
@@ -385,7 +464,7 @@ header {
 }
 
 .testimonials {
-  background-color: white;
+  background-color: #222222;
   height: 70vh;
   width: 100%;
   color: black;
@@ -488,5 +567,30 @@ footer {
   height: 50vh;
   width: 100%;
   padding: 80px 0px 80px 0px;
+
+}
+
+
+// ################# MODAL STYLING #################
+
+.lead_modal {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .modal_close {
+
+  }
+
+  .lead_container {
+    width: 500px;
+    height: 600px;
+    background-color: white;
+  }
 
 }
