Email Notifications Setup

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -27,7 +27,7 @@
         <p id="nav_facebook"><span class="fb_span"><i class="fa fa-facebook" aria-hidden="true"></i>Excel Drive on Facebook</span></p>
       </a>
       <div class="free_lesson_btn">
-        <p>Claim a Free Lesson</p>
+        <p>Book Now</p>
       </div>
     </div>
   </div>
@@ -41,7 +41,7 @@
         <p id="hero_p">Excel Drive boasts some of the finest instructors in Australia for that important milestone of learning to drive.</p>
 
         <div class="hero_cta">
-          <p>Claim a Free Lesson</p>
+          <p>Get Started</p>
         </div>
       </div>
 
