Added Analytics and Copy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,8 @@
     /></noscript>
     <!-- End Facebook Pixel Code -->
 
+    <script src="//load.sumome.com/" data-sumo-site-id="02cc3dacd9446603e0cc6a05205c4598ac526b40dfa5ecb6cce3bb5af7dcbd71" async="async"></script>
+
 
   </head>
 
@@ -48,8 +50,8 @@
 
           <div class="form_stages is_active" id="form_stage_1">
 
-            <h3>|  Introductions.</h3>
-            <h2>Claim your free lesson.</h2>
+            <h3>|  Introduction.</h3>
+            <h2>Get Started Easily.</h2>
             <!-- <div class="gif_holder">
               <img src="" alt="">
             </div> -->
