--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -15,11 +15,15 @@
       <ul id="nav_button_holder">
         <!-- <li id="benefit"><span class="nav_span">What we're about</span></li>
         <p class="nav_divider">/</p> -->
-        <li id="pass_guarentee"><span class="nav_span">Pass guarantee</span></li>
+        <a target="_blank" href="https://www.exceldriveschool.com.au/first-time-pass-guarantee">
+          <li id="pass_guarentee"><span class="nav_span">Pass guarantee</span></li>
+        </a>
         <p class="nav_divider">/</p>
-        <li id="pricing"><span class="nav_span">Pricing</span></li>
-        <p class="nav_divider">/</p>
-        <li id="testimonials"><span class="nav_span">Testimonials</span></li>
+        <a target="_blank" href="https://www.exceldriveschool.com.au/driving-lessons-melbourne">
+          <li id="pricing"><span class="nav_span">Pricing</span></li>
+        </a>
+        <!-- <p class="nav_divider">/</p> -->
+        <!-- <li id="testimonials"><span class="nav_span">Testimonials</span></li> -->
       </ul>
     </div>
     <div class="nav_col_3">
