--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,18 @@
 
     <script src="//load.sumome.com/" data-sumo-site-id="02cc3dacd9446603e0cc6a05205c4598ac526b40dfa5ecb6cce3bb5af7dcbd71" async="async"></script>
 
+    <script>
+    
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-93471925-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
 
   </head>
 
