Update Lead Form / Validations

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -30,9 +30,11 @@
       <a href="https://www.facebook.com/ExcelDrive/" target='_blank'>
         <p id="nav_facebook"><span class="fb_span"><i class="fa fa-facebook" aria-hidden="true"></i>Excel Drive on Facebook</span></p>
       </a>
-      <div class="free_lesson_btn">
-        <p>Book Now</p>
-      </div>
+      <a href="/more-info">
+        <div class="free_lesson_btn">
+            <p>Get Started</p>
+        </div>
+      </a>
     </div>
   </div>
 
@@ -44,9 +46,11 @@
         <h1><span id="hero_highlight">Get your license</span> <br>today with <span id="hero_attributes"></span></h1>
         <p id="hero_p">Excel Drive boasts some of the finest instructors in Australia for that important milestone of learning to drive.</p>
 
-        <div class="hero_cta">
-          <p>Get Started</p>
-        </div>
+        <a href="/more-info">
+          <div class="hero_cta">
+            <p>Get Started</p>
+          </div>
+        </a>
       </div>
 
       <div class="hero_right">
