--- a/app/views/students/start.html.erb
+++ b/app/views/students/start.html.erb
@@ -1,1 +1,48 @@
-<p>Get Started 2-3 Options</p>
+
+<div class="option_container">
+
+  <div class="underlay"></div>
+  <!-- <a href="/">
+    <div class="modal_close">
+      <i class="fa fa-3x fa-times" aria-hidden="true"></i>
+    </div>
+  </a> -->
+
+  <div class="option_float">
+    <div class="card_option" id="card_left">
+      <a href="/more-info">
+        <div class="op_img" id="join_card">
+          <img src="http://image.shutterstock.com/z/stock-vector-car-keys-illustration-146180099.jpg" alt="">
+        </div>
+        <div class="op_text">
+          <h1 id="join_text">Sign Up</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae excepturi </p>
+        </div>
+      </a>
+    </div>
+    <div class="card_option card_feature">
+      <a href="/booking">
+        <div class="op_img" id="book_card">
+          <img src="http://image.shutterstock.com/z/stock-vector-car-keys-illustration-146180099.jpg" alt="">
+        </div>
+        <div class="op_text" id="feature_op">
+          <h1 id="book_text">Book Now</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae excepturi ducimus sed aliquid.</p>
+        </div>
+      </a>
+    </div>
+    <div class="card_option" id="card_right">
+      <a href="/more-info">
+        <div class="op_img" id="info_card">
+          <img src="http://image.shutterstock.com/z/stock-vector-car-keys-illustration-146180099.jpg" alt="">
+        </div>
+        <div class="op_text">
+          <h1 id="info_text">More Info</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae excepturi </p>
+        </div>
+      </a>
+    </div>
+
+  </div>
+
+</div>
