Update DB / Dashboard View

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,10 +29,10 @@
 
   <div class="content">
 
-    <div class="lead_analytics">
+    <!-- <div class="lead_analytics">
       <div class="stat_holder stat_total">
         <div class="stat_title">Total Leads</div>
-        <div class="stat_view">295</div>
+        <div class="stat_view"><%= Lead.count %></div>
       </div>
       <div class="stat_holder">
         <div class="stat_title">
@@ -53,7 +53,7 @@
       <div class="stat_holder stat_chart">
         <canvas id="myChart" width="100%" height"95px"></canvas>
       </div>
-    </div>
+    </div> -->
 
     <div class="panel">
       <div class="panel_header">
