--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -383,3 +383,217 @@
   }
 
 }
+
+#booking_cont {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: block;
+  overflow: scroll;
+}
+
+#booking_underlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+}
+
+.booking_container  {
+  height: auto;
+  width: 100%;
+  max-width: 900px;
+  background-color: #fff;
+  border-radius: 10px;
+  z-index: 50;
+  box-sizing: border-box;
+  margin: 3% auto;
+  padding: 70px;
+  position: relative;
+  z-index: 20;
+
+  h2 {
+    font-size: 2.3em;
+    color: #2ecc71;
+    font-family: 'Exo', sans-serif;
+    line-height: 1.2em;
+    text-align: left;
+    margin-bottom: 25px;
+    text-align: center;
+  }
+
+  h3 {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    font-size: 1.1em;
+    line-height: 1.5em;
+    font-weight: 400;
+    color: #90959A;
+    text-align: left;
+    // padding-left: 40px;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+
+  h4 {
+    font-size: 1.5em;
+    color: #4b4b4b;
+    font-family: 'Exo', sans-serif;
+    line-height: 1.2em;
+    text-align: left;
+    margin-bottom: 25px;
+  }
+
+  input {
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    margin: 5px 0px 15px 0px;
+    // border: 1px solid #2ecc71;
+    padding: 0px 25px 0px 25px;
+    font-size: 1em;
+    color: #282828;
+    background-color: #f4f4f5;
+    border: 0px;
+
+    &:focus {
+      outline: none;
+    }
+
+  }
+
+  label {
+    font-family: 'Exo', sans-serif;
+    font-size: 0.9em;
+    color: #282828;
+    letter-spacing: 0.07em;
+    padding-bottom: 5px;
+  }
+
+  button {
+    width: 100%;
+    height: 50px;
+    margin: 25px 0px 0px 0px;
+    background-color: #2ecc71;
+    color: white;
+    border: 0px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 0.8em;
+
+    &:hover {
+      background-color: #31de7a;
+
+    }
+  }
+
+
+  select {
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+    width: 90%;
+    height: 50px;
+    border: 0px;
+    background-color: #f4f4f5;
+    cursor: pointer;
+    padding: 0px 20px 0px 20px;
+    font-size: 0.8em;
+    margin-top: 5px;
+    // border: 1px solid red;
+    vertical-align: top;
+  }
+
+  .drop_icon {
+    // border: 1px solid red;
+    width: 7%;
+    display: inline-block;
+    color: #dbdbdb;
+    font-size: 1.5em;
+    line-height: 50px;
+    text-align: center;
+    cursor: pointer;
+
+    &:hover {
+      color: #c9c5c5;
+    }
+  }
+
+  .booking_title {
+    width: 100%;
+  }
+
+  .booking_content {
+    display: flex;
+  }
+
+  .booking_inputs {
+    width: 50%;
+    height: 100%;
+    padding: 10px;
+  }
+
+  .booking_options {
+    width: 50%;
+    height: 100%;
+    padding: 10px;
+
+    #date_picker {
+      border: 5px solid #ededed;
+      width: 100%;
+    }
+
+    #time_picker {
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    .timeDis {
+      display: block;
+      width: 100%;
+      background-color: #2ecc71;
+      padding: 15px;
+      margin: 5px 0px 5px 0px;
+      color: white;
+      font-family: 'Exo', sans-serif;
+      font-size: 0.8em;
+      transition: 0.3s;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #29bd67;
+      }
+    }
+
+  }
+
+  .booking_summary {
+    border-top: 2px solid #f4f4f4;
+    border-left: 0px;
+    border-bottom: 0px;
+    border-right: 0px;
+    width: 100%;
+    height: 100px;
+    margin-top: 20px;
+    text-align: right;
+
+    button {
+      background-color: #2ecc71;
+      padding: 15px 50px 15px 50px;
+      border-radius: 5px;
+      color: white;
+      border: 0;
+      display: inline-block;
+      width: auto;
+      cursor: pointer;
+      transition: 0.3s;
+
+      &:hover {
+        background-color: #29bd67;
+
+      }
+
+    }
+  }
+
+}
