--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -450,7 +450,7 @@
     margin: 5px 0px 15px 0px;
     // border: 1px solid #2ecc71;
     padding: 0px 25px 0px 25px;
-    font-size: 1em;
+    font-size: 0.9em;
     color: #282828;
     background-color: #f4f4f5;
     border: 0px;
@@ -552,13 +552,14 @@
       display: block;
       width: 100%;
       background-color: #2ecc71;
-      padding: 15px;
+      padding: 10px 10px 5px 20px;
       margin: 5px 0px 5px 0px;
       color: white;
       font-family: 'Exo', sans-serif;
       font-size: 0.8em;
       transition: 0.3s;
       cursor: pointer;
+      display: flex;
 
       &:hover {
         background-color: #29bd67;
@@ -594,6 +595,30 @@
       }
 
     }
+  }
+
+  #book_disclaimer {
+    font-size: 0.7em;
+  }
+
+  .time_select {
+    background-color: rgba(#fff, 0.2);
+    width: 100%;
+    padding: 10px 10px 10px 20px;
+    margin: 0;
+    color: rgb(45, 45, 45);
+    font-family: 'Exo', sans-serif;
+    font-size: 0.9em;
+    height: 40px;
+    font-weight: 500;
+  }
+
+  .date_show {
+    width: 50%;
+  }
+
+  .timeCol {
+    width: 50%;
   }
 
 }
