Added Google API Key

--- a/app/views/students/booking.html.erb
+++ b/app/views/students/booking.html.erb
@@ -45,7 +45,7 @@
 
 </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy__cMEKBcPStq3wd-NQo8WFHqdQ9nApY&v=3.exp&sensor=false&libraries=places"></script>
 
 <script>
 
