Update Students Styling

--- a/app/views/students/start.html.erb
+++ b/app/views/students/start.html.erb
@@ -15,7 +15,7 @@
           <img src="http://image.shutterstock.com/z/stock-vector-car-keys-illustration-146180099.jpg" alt="">
         </div>
         <div class="op_text">
-          <h1 id="join_text">Sign Up</h1>
+          <h1 id="join_text">More Info</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae excepturi </p>
         </div>
       </a>
