--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,4 +1,5 @@
-
+<%= @hey %>
+<%= @urlstring %>
 <header>
 
   <div id="triangle_pattern">
@@ -8,7 +9,8 @@
   <div class="nav">
     <div class="nav_col_1">
       <a href="/">
-        <img src="images/logo.png" alt="" class="logo">
+        <!-- <img src="images/logo.png" alt="" class="logo"> -->
+        <%= image_tag("logo.png") %>
       </a>
     </div>
     <div class="nav_col_2">
