--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -184,7 +184,7 @@
     }
 
     .p_date {
-      width: 10%;
+      width: 7%;
       height: 50px;
     }
 
@@ -194,7 +194,7 @@
     }
 
     .p_email {
-      width: 25%;
+      width: 23%;
       height: 50px;
     }
 
@@ -213,8 +213,8 @@
       height: 50px;
     }
 
-    .p_status {
-      width: 13%;
+    .p_refer {
+      width: 25%;
       height: 50px;
     }
 
