--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,5 +1,4 @@
-<%= @hey %>
-<%= @urlstring %>
+
 <header>
 
   <div id="triangle_pattern">
@@ -30,9 +29,17 @@
     </div>
     <div class="nav_col_3">
       <a href="https://www.facebook.com/ExcelDrive/" target='_blank'>
-        <p id="nav_facebook"><span class="fb_span"><i class="fa fa-facebook" aria-hidden="true"></i>Excel Drive on Facebook</span></p>
+        <p id="nav_facebook"><span class="fb_span"><i class="fa fa-facebook" aria-hidden="true"></i>Excels Drive on Facebook</span></p>
       </a>
-      <a href="/more-info">
+      <% if @urloffer != nil %>
+        <a href="/more-info?referred_by=<%= @urloffer %>">
+      <% end %>
+      <% if @urlshare != nil %>
+        <a href="/more-info?share_by=<%= @urlshare %>">
+      <% end %>
+      <% if @urlshare == nil && @urloffer == nil %>
+        <a href="/more-info">
+      <% end %>
         <div class="free_lesson_btn">
             <p>Get Started</p>
         </div>
@@ -47,8 +54,15 @@
       <div class="hero_left">
         <h1><span id="hero_highlight">Get your license</span> <br>today with <span id="hero_attributes"></span></h1>
         <p id="hero_p">Excel Drive boasts some of the finest instructors in Australia for that important milestone of learning to drive.</p>
-
-        <a href="/more-info">
+        <% if @urloffer != nil %>
+          <a href="/more-info?referred_by=<%= @urloffer %>">
+        <% end %>
+        <% if @urlshare != nil %>
+          <a href="/more-info?share_by=<%= @urlshare %>">
+        <% end %>
+        <% if @urlshare == nil && @urloffer == nil %>
+          <a href="/more-info">
+        <% end %>
           <div class="hero_cta">
             <p>Get Started</p>
           </div>
