Dashboard Styling Excess Text

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -250,6 +250,8 @@
       font-size: 0.8em;
       font-weight: 500;
       color: #747474;
+      padding: 0px 5px 0px 5px;
+      overflow: hidden;
     }
 
     a {
